--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>577</width>
+    <width>740</width>
     <height>421</height>
    </rect>
   </property>
@@ -17,10 +17,10 @@
    <widget class="QListWidget" name="listWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>290</y>
-      <width>561</width>
-      <height>71</height>
+      <x>540</x>
+      <y>40</y>
+      <width>191</width>
+      <height>291</height>
      </rect>
     </property>
    </widget>
@@ -86,7 +86,7 @@
    <widget class="QPushButton" name="robot_stop">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>280</x>
       <y>170</y>
       <width>80</width>
       <height>23</height>
@@ -99,7 +99,7 @@
    <widget class="QPushButton" name="robot_go">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>280</x>
       <y>130</y>
       <width>80</width>
       <height>23</height>
@@ -112,7 +112,7 @@
    <widget class="QPushButton" name="robot_back">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>280</x>
       <y>210</y>
       <width>80</width>
       <height>23</height>
@@ -125,7 +125,7 @@
    <widget class="QPushButton" name="robot_left">
     <property name="geometry">
      <rect>
-      <x>89</x>
+      <x>189</x>
       <y>170</y>
       <width>71</width>
       <height>23</height>
@@ -138,7 +138,7 @@
    <widget class="QPushButton" name="robot_right">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>380</x>
       <y>170</y>
       <width>71</width>
       <height>23</height>
@@ -152,9 +152,9 @@
     <property name="geometry">
      <rect>
       <x>410</x>
-      <y>200</y>
-      <width>120</width>
-      <height>80</height>
+      <y>310</y>
+      <width>121</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="widgetResizable">
@@ -165,11 +165,243 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>118</width>
-       <height>78</height>
+       <width>119</width>
+       <height>49</height>
       </rect>
      </property>
     </widget>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>10</y>
+      <width>161</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Лог передачи данных</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>50</y>
+      <width>231</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Таймер</string>
+    </property>
+    <widget class="QCheckBox" name="set_timer">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>21</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="time_deley">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>30</y>
+       <width>131</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>30</y>
+       <width>31</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>ms</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="speed_box">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>110</y>
+      <width>120</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Скорость</string>
+    </property>
+    <widget class="QSpinBox" name="speed">
+     <property name="geometry">
+      <rect>
+       <x>4</x>
+       <y>30</y>
+       <width>42</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>63</number>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="set_speed">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>30</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>set</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QPushButton" name="scan_port">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>70</y>
+      <width>91</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Обновить</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>210</y>
+      <width>221</width>
+      <height>151</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Сенсоры</string>
+    </property>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>18</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Дальность</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="dist">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>18</y>
+       <width>131</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>51</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Касание</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="touch">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>50</y>
+       <width>131</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>80</y>
+       <width>51</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Микрофон</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="micro">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>80</y>
+       <width>131</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="reinit_sensor">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>110</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Обновить</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QPushButton" name="clear_log">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>340</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Очистить</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -177,8 +409,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>577</width>
-     <height>20</height>
+     <width>740</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
